--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 
 <meta name="description" content="">
 <meta name="author" content="">
-<link rel="canonical" href="https://example.org/">
+<link rel="canonical" href="https://zanksc.github.io/">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.d6fcd20a4fb86efa4dfac8ec95da60244cc8871042183da1ef28e3a762ad79c8.css" integrity="sha256-1vzSCk&#43;4bvpN&#43;sjsldpgJEzIhxBCGD2h7yjjp2Ktecg=" rel="preload stylesheet" as="style">
-<link rel="icon" href="https://example.org/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="https://example.org/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="https://example.org/favicon-32x32.png">
-<link rel="apple-touch-icon" href="https://example.org/apple-touch-icon.png">
-<link rel="mask-icon" href="https://example.org/safari-pinned-tab.svg">
+<link rel="icon" href="https://zanksc.github.io/favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="https://zanksc.github.io/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="https://zanksc.github.io/favicon-32x32.png">
+<link rel="apple-touch-icon" href="https://zanksc.github.io/apple-touch-icon.png">
+<link rel="mask-icon" href="https://zanksc.github.io/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" type="application/rss+xml" href="https://example.org/index.xml">
-<link rel="alternate" hreflang="en" href="https://example.org/">
+<link rel="alternate" type="application/rss+xml" href="https://zanksc.github.io/index.xml">
+<link rel="alternate" hreflang="en" href="https://zanksc.github.io/">
 <noscript>
     <style>
         #theme-toggle,
@@ -57,7 +57,7 @@
         }
 
     </style>
-</noscript><meta property="og:url" content="https://example.org/">
+</noscript><meta property="og:url" content="https://zanksc.github.io/">
   <meta property="og:site_name" content="乱话三千">
   <meta property="og:title" content="乱话三千">
   <meta property="og:locale" content="zh-cn">
@@ -71,9 +71,9 @@
   "@context": "https://schema.org",
   "@type": "Organization",
   "name": "乱话三千",
-  "url": "https://example.org/",
+  "url": "https://zanksc.github.io/",
   "description": "",
-  "logo": "https://example.org/favicon.ico",
+  "logo": "https://zanksc.github.io/favicon.ico",
   "sameAs": [
       
   ]
@@ -96,7 +96,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://example.org/" accesskey="h" title="乱话三千 (Alt + H)">乱话三千</a>
+            <a href="https://zanksc.github.io/" accesskey="h" title="乱话三千 (Alt + H)">乱话三千</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -122,22 +122,22 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="https://example.org/posts/" title="文章">
+                <a href="https://zanksc.github.io/posts/" title="文章">
                     <span>文章</span>
                 </a>
             </li>
             <li>
-                <a href="https://example.org/archives/" title="时间线">
+                <a href="https://zanksc.github.io/archives/" title="时间线">
                     <span>时间线</span>
                 </a>
             </li>
             <li>
-                <a href="https://example.org/tags/" title="标签">
+                <a href="https://zanksc.github.io/tags/" title="标签">
                     <span>标签</span>
                 </a>
             </li>
             <li>
-                <a href="https://example.org/about/" title="关于">
+                <a href="https://zanksc.github.io/about/" title="关于">
                     <span>关于</span>
                 </a>
             </li>
@@ -146,14 +146,14 @@
 </header>
 <main class="main"><div class="profile">
     <div class="profile_inner">
-        <img draggable="false" src="https://example.org/homepage.jpg" alt="profile image" title=""
+        <img draggable="false" src="https://zanksc.github.io/homepage.jpg" alt="profile image" title=""
             height="150" width="150" />
         <h1>乱话三千</h1>
         <span>记载着某个人的胡言乱语</span><div class="social-icons" >
 </div>
 
         <div class="buttons">
-            <a class="button" href="/posts" rel="noopener" title="点击开始">
+            <a class="button" href="/posts/" rel="noopener" title="点击开始">
                 <span class="button-inner">
                     点击开始
                 </span>
@@ -165,7 +165,7 @@
     </main>
     
 <footer class="footer">
-        <span>&copy; 2024 <a href="https://example.org/">乱话三千</a></span> · 
+        <span>&copy; 2024 <a href="https://zanksc.github.io/">乱话三千</a></span> · 
 
     <span>
         Powered by
