搜索页面&侧边栏目录 ZaNksC/zanks-blog@e7077766cfd9665734bb2f651b001bc03ae865bb

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta name="description" content="">
 <meta name="author" content="">
 <link rel="canonical" href="https://zanksc.github.io/">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.d6fcd20a4fb86efa4dfac8ec95da60244cc8871042183da1ef28e3a762ad79c8.css" integrity="sha256-1vzSCk&#43;4bvpN&#43;sjsldpgJEzIhxBCGD2h7yjjp2Ktecg=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.ec726202ed9b62bafa5560c72e4b13cbf1be1500925ef92f0722af2f0b49fdec.css" integrity="sha256-7HJiAu2bYrr6VWDHLksTy/G&#43;FQCSXvkvByKvLwtJ/ew=" rel="preload stylesheet" as="style">
 <link rel="icon" href="https://zanksc.github.io/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://zanksc.github.io/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="https://zanksc.github.io/favicon-32x32.png">
@@ -20,6 +20,7 @@
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
 <link rel="alternate" type="application/rss+xml" href="https://zanksc.github.io/index.xml">
+<link rel="alternate" type="application/json" href="https://zanksc.github.io/index.json">
 <link rel="alternate" hreflang="en" href="https://zanksc.github.io/">
 <noscript>
     <style>
@@ -121,6 +122,11 @@
             </div>
         </div>
         <ul id="menu">
+            <li>
+                <a href="https://zanksc.github.io/search/" title="搜索 (Alt &#43; /)" accesskey=/>
+                    <span>搜索</span>
+                </a>
+            </li>
             <li>
                 <a href="https://zanksc.github.io/posts/" title="文章">
                     <span>文章</span>
