--- a/search/index.html
+++ b/search/index.html
@@ -10,7 +10,7 @@
 <meta name="description" content="搜索 - 乱话三千">
 <meta name="author" content="">
 <link rel="canonical" href="https://zanksc.github.io/search/">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.ec726202ed9b62bafa5560c72e4b13cbf1be1500925ef92f0722af2f0b49fdec.css" integrity="sha256-7HJiAu2bYrr6VWDHLksTy/G&#43;FQCSXvkvByKvLwtJ/ew=" rel="preload stylesheet" as="style"><link crossorigin="anonymous" rel="preload" as="fetch" href="../index.json">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.fa329e1dd2ec5d5b1b2d32d23fb94ab65a33f42f5bd66aed5458567a7df4bbed.css" integrity="sha256-&#43;jKeHdLsXVsbLTLSP7lKtloz9C9b1mrtVFhWen30u&#43;0=" rel="preload stylesheet" as="style"><link crossorigin="anonymous" rel="preload" as="fetch" href="../index.json">
 <script defer crossorigin="anonymous" src="/assets/js/search.54afeae09605b61b886fb05bb6c9fa48593e3b12d64dbe8c137b738de2af15b3.js" integrity="sha256-VK/q4JYFthuIb7Bbtsn6SFk&#43;OxLWTb6ME3tzjeKvFbM="></script>
 <link rel="icon" href="https://zanksc.github.io/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://zanksc.github.io/favicon-16x16.png">
