时间线 ZaNksC/zanks-blog@8e993d7b5e85364f9497bc6515b879f698a60a93

--- a/search/index.html
+++ b/search/index.html
@@ -165,6 +165,11 @@
                 </a>
             </li>
             <li>
+                <a href="https://zanksc.github.io/archives/" title="时间轴">
+                    <span>时间轴</span>
+                </a>
+            </li>
+            <li>
                 <a href="https://zanksc.github.io/tags/" title="标签">
                     <span>标签</span>
                 </a>
