--- a/404.html
+++ b/404.html
@@ -120,6 +120,11 @@
                 </a>
             </li>
             <li>
+                <a href="https://zanksc.github.io/archives/" title="时间轴">
+                    <span>时间轴</span>
+                </a>
+            </li>
+            <li>
                 <a href="https://zanksc.github.io/tags/" title="标签">
                     <span>标签</span>
                 </a>
