--- a/search/index.html
+++ b/search/index.html
@@ -15,6 +15,7 @@
   <meta name="referrer" content="no-referrer-when-downgrade">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.fa329e1dd2ec5d5b1b2d32d23fb94ab65a33f42f5bd66aed5458567a7df4bbed.css" integrity="sha256-&#43;jKeHdLsXVsbLTLSP7lKtloz9C9b1mrtVFhWen30u&#43;0=" rel="preload stylesheet" as="style"><link crossorigin="anonymous" rel="preload" as="fetch" href="../index.json">
 <script defer crossorigin="anonymous" src="/assets/js/search.54afeae09605b61b886fb05bb6c9fa48593e3b12d64dbe8c137b738de2af15b3.js" integrity="sha256-VK/q4JYFthuIb7Bbtsn6SFk&#43;OxLWTb6ME3tzjeKvFbM="></script>
+<script src="https://kit.fontawesome.com/4f00e1f6e6.js" crossorigin="anonymous"></script>
 <link rel="icon" href="https://zanksc.github.io/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://zanksc.github.io/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="https://zanksc.github.io/favicon-32x32.png">
@@ -203,16 +204,8 @@
     
 <footer class="footer">
     <span>&copy; 2024 <a href="https://zanksc.github.io/">乱话三千</a></span> · 
-
     
-    <div class="busuanzi-footer">
-        <span id="busuanzi_container_site_pv">
-            本站总访问量<span id="busuanzi_value_site_pv"></span>次
-        </span>
-        <span id="busuanzi_container_site_uv">
-            本站访客数<span id="busuanzi_value_site_uv"></span>人次
-        </span>
-    </div><span>
+    <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
         <a href="https://github.com/adityatelange/hugo-PaperMod/" rel="noopener" target="_blank">PaperMod</a>
