添加favicon ZaNksC/zanks-blog@d790e78b1aaf1114ab51162272bc3ab7db1661f3

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
   <meta name="referrer" content="no-referrer-when-downgrade">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.fa329e1dd2ec5d5b1b2d32d23fb94ab65a33f42f5bd66aed5458567a7df4bbed.css" integrity="sha256-&#43;jKeHdLsXVsbLTLSP7lKtloz9C9b1mrtVFhWen30u&#43;0=" rel="preload stylesheet" as="style">
 <script src="https://kit.fontawesome.com/4f00e1f6e6.js" crossorigin="anonymous"></script>
-<link rel="icon" href="https://zanksc.github.io/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="https://zanksc.github.io/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="https://zanksc.github.io/favicon-32x32.png">
-<link rel="apple-touch-icon" href="https://zanksc.github.io/apple-touch-icon.png">
+<link rel="icon" href="https://zanksc.github.io/assets/favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="https://zanksc.github.io/assets/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="https://zanksc.github.io/assets/favicon-32x32.png">
+<link rel="apple-touch-icon" href="https://zanksc.github.io/assets/apple-touch-icon.png">
 <link rel="mask-icon" href="https://zanksc.github.io/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
@@ -78,7 +78,7 @@
   "name": "乱话三千",
   "url": "https://zanksc.github.io/",
   "description": "",
-  "logo": "https://zanksc.github.io/favicon.ico",
+  "logo": "https://zanksc.github.io/assets/favicon.ico",
   "sameAs": [
       
   ]
@@ -157,7 +157,7 @@
 <main class="main"><div class="profile">
     <div class="profile_inner">
         <img draggable="false" src="https://zanksc.github.io/homepage.jpg" alt="profile image" title=""
-            height="150" width="150" />
+            height="300" width="300" />
         <h1>乱话三千</h1>
         <span>记载着某个人的胡言乱语</span><div class="social-icons" >
 </div>
