--- a/404.html
+++ b/404.html
@@ -59,7 +59,15 @@
         }
 
     </style>
-</noscript><meta property="og:url" content="https://zanksc.github.io/404.html">
+</noscript>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-420MPRSEER"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-420MPRSEER');
+</script><meta property="og:url" content="https://zanksc.github.io/404.html">
   <meta property="og:site_name" content="乱话三千">
   <meta property="og:title" content="404 Page not found">
   <meta property="og:locale" content="zh-cn">
