--- a/index.html
+++ b/index.html
@@ -62,7 +62,15 @@
         }
 
     </style>
-</noscript><meta property="og:url" content="https://zanksc.github.io/">
+</noscript>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-420MPRSEER"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-420MPRSEER');
+</script><meta property="og:url" content="https://zanksc.github.io/">
   <meta property="og:site_name" content="乱话三千">
   <meta property="og:title" content="乱话三千">
   <meta property="og:locale" content="zh-cn">
