--- a/index.html
+++ b/index.html
@@ -141,6 +141,11 @@
                 </a>
             </li>
             <li>
+                <a href="https://blog.zanks.cn/recipe/" title="🍳 食谱">
+                    <span>🍳 食谱</span>
+                </a>
+            </li>
+            <li>
                 <a href="https://blog.zanks.cn/posts/" title="📖 文章">
                     <span>📖 文章</span>
                 </a>
@@ -194,7 +199,7 @@
     </main>
     
 <footer class="footer">
-    <span>&copy; 2024 <a href="https://blog.zanks.cn/">乱话三千</a></span> · 
+    <span>&copy; 2025 - 2024 · <a href="https://blog.zanks.cn/">乱话三千</a></span> · 
     
     <span>
         Powered by
