--- a/404.html
+++ b/404.html
@@ -9,20 +9,20 @@
 <meta name="keywords" content="">
 <meta name="description" content="">
 <meta name="author" content="">
-<link rel="canonical" href="https://blog.zanks.cn/404.html">
+<link rel="canonical" href="https://www.zanks.link/404.html">
 
 <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
   <meta name="referrer" content="no-referrer-when-downgrade">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.dffb32c0572413ff6a2d2fe9665acc700e94f34dfd411de99afb7749ae4b7454.css" integrity="sha256-3/sywFckE/9qLS/pZlrMcA6U8039QR3pmvt3Sa5LdFQ=" rel="preload stylesheet" as="style">
 <script src="https://kit.fontawesome.com/4f00e1f6e6.js" crossorigin="anonymous"></script>
-<link rel="icon" href="https://blog.zanks.cn/assets/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="https://blog.zanks.cn/assets/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="https://blog.zanks.cn/assets/favicon-32x32.png">
-<link rel="apple-touch-icon" href="https://blog.zanks.cn/assets/apple-touch-icon.png">
-<link rel="mask-icon" href="https://blog.zanks.cn/safari-pinned-tab.svg">
+<link rel="icon" href="https://www.zanks.link/assets/favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="https://www.zanks.link/assets/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="https://www.zanks.link/assets/favicon-32x32.png">
+<link rel="apple-touch-icon" href="https://www.zanks.link/assets/apple-touch-icon.png">
+<link rel="mask-icon" href="https://www.zanks.link/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" hreflang="zh" href="https://blog.zanks.cn/404.html">
+<link rel="alternate" hreflang="zh" href="https://www.zanks.link/404.html">
 <noscript>
     <style>
         #theme-toggle,
@@ -67,7 +67,7 @@
   gtag('js', new Date());
 
   gtag('config', 'G-420MPRSEER');
-</script><meta property="og:url" content="https://blog.zanks.cn/404.html">
+</script><meta property="og:url" content="https://www.zanks.link/404.html">
   <meta property="og:site_name" content="乱话三千">
   <meta property="og:title" content="404 Page not found">
   <meta property="og:locale" content="zh-cn">
@@ -94,7 +94,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://blog.zanks.cn/" accesskey="h" title="乱话三千 (Alt + H)">乱话三千</a>
+            <a href="https://www.zanks.link/" accesskey="h" title="乱话三千 (Alt + H)">乱话三千</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -120,42 +120,42 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="https://blog.zanks.cn/search/" title="🔍 搜索 (Alt &#43; /)" accesskey=/>
+                <a href="https://www.zanks.link/search/" title="🔍 搜索 (Alt &#43; /)" accesskey=/>
                     <span>🔍 搜索</span>
                 </a>
             </li>
             <li>
-                <a href="https://blog.zanks.cn/recipe/" title="🍳 食谱">
+                <a href="https://www.zanks.link/recipe/" title="🍳 食谱">
                     <span>🍳 食谱</span>
                 </a>
             </li>
             <li>
-                <a href="https://blog.zanks.cn/posts/" title="📖 文章">
+                <a href="https://www.zanks.link/posts/" title="📖 文章">
                     <span>📖 文章</span>
                 </a>
             </li>
             <li>
-                <a href="https://blog.zanks.cn/archives/" title="⌛ 时间轴">
+                <a href="https://www.zanks.link/archives/" title="⌛ 时间轴">
                     <span>⌛ 时间轴</span>
                 </a>
             </li>
             <li>
-                <a href="https://blog.zanks.cn/tags/" title="🏷️ 标签">
+                <a href="https://www.zanks.link/tags/" title="🏷️ 标签">
                     <span>🏷️ 标签</span>
                 </a>
             </li>
             <li>
-                <a href="https://blog.zanks.cn/friends/" title="🧑‍🤝‍🧑 友链">
+                <a href="https://www.zanks.link/friends/" title="🧑‍🤝‍🧑 友链">
                     <span>🧑‍🤝‍🧑 友链</span>
                 </a>
             </li>
             <li>
-                <a href="https://blog.zanks.cn/message/" title="💬 留言板">
+                <a href="https://www.zanks.link/message/" title="💬 留言板">
                     <span>💬 留言板</span>
                 </a>
             </li>
             <li>
-                <a href="https://blog.zanks.cn/about/" title="😾 关于">
+                <a href="https://www.zanks.link/about/" title="😾 关于">
                     <span>😾 关于</span>
                 </a>
             </li>
@@ -167,7 +167,7 @@
     </main>
     
 <footer class="footer">
-    <span>&copy; 2025 - 2024 · <a href="https://blog.zanks.cn/">乱话三千</a></span> · 
+    <span>&copy; 2025 - 2024 · <a href="https://www.zanks.link/">乱话三千</a></span> · 
     
     <span>
         Powered by
