--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
   <meta name="referrer" content="no-referrer-when-downgrade">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.24533c77eb7083ab3e4c1c2dfe000fe0d77a6e10497a2fe0a241736b3597bbdc.css" integrity="sha256-JFM8d&#43;twg6s&#43;TBwt/gAP4Nd6bhBJei/gokFzazWXu9w=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.0bc1e7308b19cb71e462cb4601837cdb49015d61dcaa006d01a63dcce92e74fa.css" integrity="sha256-C8HnMIsZy3HkYstGAYN820kBXWHcqgBtAaY9zOkudPo=" rel="preload stylesheet" as="style">
 <script src="https://kit.fontawesome.com/4f00e1f6e6.js" crossorigin="anonymous"></script>
 <link rel="icon" href="https://www.zanks.link/assets/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://www.zanks.link/assets/favicon-16x16.png">
