--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
   <meta name="referrer" content="no-referrer-when-downgrade">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.624101dd2f467d5e17c6c0b2b75ca4234289dedac023063cb677d67ac8ceef33.css" integrity="sha256-YkEB3S9GfV4XxsCyt1ykI0KJ3trAIwY8tnfWesjO7zM=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.ff265089d0600cb2d39881d3f618e5dc77709d6a7ded07e4de0884e5b93e3ce0.css" integrity="sha256-/yZQidBgDLLTmIHT9hjl3HdwnWp97Qfk3giE5bk&#43;POA=" rel="preload stylesheet" as="style">
 <script src="https://kit.fontawesome.com/4f00e1f6e6.js" crossorigin="anonymous"></script>
 <link rel="icon" href="https://www.zanks.link/assets/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://www.zanks.link/assets/favicon-16x16.png">
