--- a/index.html
+++ b/index.html
@@ -142,11 +142,6 @@
                 </a>
             </li>
             <li>
-                <a href="https://www.zanks.link/recipe/" title="🍳 食谱">
-                    <span>🍳 食谱</span>
-                </a>
-            </li>
-            <li>
                 <a href="https://www.zanks.link/posts/" title="📖 文章">
                     <span>📖 文章</span>
                 </a>
@@ -154,11 +149,6 @@
             <li>
                 <a href="https://www.zanks.link/archives/" title="⌛ 时间轴">
                     <span>⌛ 时间轴</span>
-                </a>
-            </li>
-            <li>
-                <a href="https://www.zanks.link/tags/" title="🏷️ 标签">
-                    <span>🏷️ 标签</span>
                 </a>
             </li>
             <li>
@@ -213,6 +203,16 @@
             <a class="button" href="/recipe/" rel="noopener" title="珍藏菜谱">
                 <span class="button-inner">
                     珍藏菜谱
+                </span>
+            </a>
+            <a class="button" href="/tags/" rel="noopener" title="🏷️ 标签云">
+                <span class="button-inner">
+                    🏷️ 标签云
+                </span>
+            </a>
+            <a class="button" href="/tags/" rel="noopener" title="⌛ 时间轴">
+                <span class="button-inner">
+                    ⌛ 时间轴
                 </span>
             </a>
         </div>
