--- a/index.html
+++ b/index.html
@@ -147,11 +147,6 @@
                 </a>
             </li>
             <li>
-                <a href="https://www.zanks.link/archives/" title="⌛ 时间轴">
-                    <span>⌛ 时间轴</span>
-                </a>
-            </li>
-            <li>
                 <a href="https://www.zanks.link/friends/" title="🧑‍🤝‍🧑 友链">
                     <span>🧑‍🤝‍🧑 友链</span>
                 </a>
@@ -195,14 +190,14 @@
 </div>
 
         <div class="buttons">
-            <a class="button" href="/posts/" rel="noopener" title="看看文章">
+            <a class="button" href="/posts/" rel="noopener" title="📖 看看文章">
                 <span class="button-inner">
-                    看看文章
+                    📖 看看文章
                 </span>
             </a>
-            <a class="button" href="/recipe/" rel="noopener" title="珍藏菜谱">
+            <a class="button" href="/recipe/" rel="noopener" title="🍔 珍藏菜谱">
                 <span class="button-inner">
-                    珍藏菜谱
+                    🍔 珍藏菜谱
                 </span>
             </a>
             <a class="button" href="/tags/" rel="noopener" title="🏷️ 标签云">
@@ -210,7 +205,7 @@
                     🏷️ 标签云
                 </span>
             </a>
-            <a class="button" href="/tags/" rel="noopener" title="⌛ 时间轴">
+            <a class="button" href="/archives/" rel="noopener" title="⌛ 时间轴">
                 <span class="button-inner">
                     ⌛ 时间轴
                 </span>
