修改菜单 ZaNksC/zanks-blog@bda2d61fa0a3796fbb22c4d08824f352b4c9b0cf

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 </a>
             </li>
             <li>
-                <a href="https://www.zanks.link/archives/" title="📖 文章">
+                <a href="https://www.zanks.link/posts/" title="📖 文章">
                     <span>📖 文章</span>
                 </a>
             </li>
@@ -203,6 +203,11 @@
             <a class="button" href="/tags/" rel="noopener" title="🏷️ 标签云">
                 <span class="button-inner">
                     🏷️ 标签云
+                </span>
+            </a>
+            <a class="button" href="/archives/" rel="noopener" title="⌛ 时间轴">
+                <span class="button-inner">
+                    ⌛ 时间轴
                 </span>
             </a>
         </div>
