标签搜索二合一 ZaNksC/zanks-blog@e1927dcdcbd8ee98b66c1511a2c9a3c3f13b34e6

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
   <meta name="referrer" content="no-referrer-when-downgrade">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.4514445cf5861bfb1f942f9bcb325e8113877fde723c93f4d3a040ba7e84251a.css" integrity="sha256-RRREXPWGG/sflC&#43;byzJegROHf95yPJP006BAun6EJRo=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.474a02b3adeadba17a8c782fcdc3a09316b177c039f8a47146a4557104b13903.css" integrity="sha256-R0oCs63q26F6jHgvzcOgkxaxd8A5&#43;KRxRqRVcQSxOQM=" rel="preload stylesheet" as="style">
 <script src="https://kit.fontawesome.com/4f00e1f6e6.js" crossorigin="anonymous"></script>
 <link rel="icon" href="https://www.zanks.link/assets/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://www.zanks.link/assets/favicon-16x16.png">
@@ -198,11 +198,6 @@
             <a class="button" href="/recipe/" rel="noopener" title="🍔 珍藏菜谱">
                 <span class="button-inner">
                     🍔 珍藏菜谱
-                </span>
-            </a>
-            <a class="button" href="/tags/" rel="noopener" title="🏷️ 标签云">
-                <span class="button-inner">
-                    🏷️ 标签云
                 </span>
             </a>
             <a class="button" href="/archives/" rel="noopener" title="⌛ 时间轴">
