--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </style>
 </noscript>
 
-<link rel="stylesheet" href="/assets/css/shortcode.min.99bc86d3d799f9e7804a5aa6653212351efd8283535db70b3c640abe317ce603.css" integrity="sha256-mbyG09eZ&#43;eeASlqmZTISNR79goNTXbcLPGQKvjF85gM=" crossorigin="anonymous">
+<link rel="stylesheet" href="/assets/css/shortcode.min.9e17e62f02d1dbb55dcc8b77e422943523653c9ece5678a98f2129104427ab57.css" integrity="sha256-nhfmLwLR27VdzIt35CKUNSNlPJ7OVnipjyEpEEQnq1c=" crossorigin="anonymous">
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-420MPRSEER"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -253,6 +253,9 @@
     </span>
 </footer>
 
+<script src="/js/base.js"></script>
+<script src="/js/pe-code.js"></script>
+<script src="/js/git.js"></script>
 
 <script>
     let menu = document.getElementById('menu')
@@ -283,10 +286,6 @@
     });
 
 </script>
-
-
-<script src="/js/base.js"></script>
-<script src="/js/pe-code.js"></script>
 <script>
     var mybutton = document.getElementById("top-link");
     window.onscroll = function () {
