--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
   <meta name="referrer" content="no-referrer-when-downgrade">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.c4fc2fb611152976b53f89c01bd4cf9ef90659bd490cf5c058efa6274bd02f03.css" integrity="sha256-xPwvthEVKXa1P4nAG9TPnvkGWb1JDPXAWO&#43;mJ0vQLwM=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.acba4d16c6dc2b05b8227cf1b832c5a9c71a6aabde66086217eb9ce8720eca07.css" integrity="sha256-rLpNFsbcKwW4InzxuDLFqccaaqveZghiF&#43;uc6HIOygc=" rel="preload stylesheet" as="style">
 <script src="https://kit.fontawesome.com/4f00e1f6e6.js" crossorigin="anonymous"></script>
 <link rel="icon" href="https://www.zanks.link/assets/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://www.zanks.link/assets/favicon-16x16.png">
