--- a/404.html
+++ b/404.html
@@ -131,8 +131,8 @@
                 </a>
             </li>
             <li>
-                <a href="https://www.zanks.link/friends/" title="🧑‍🤝‍🧑 友链">
-                    <span>🧑‍🤝‍🧑 友链</span>
+                <a href="https://www.zanks.link/friends/" title="🤝 友链">
+                    <span>🤝 友链</span>
                 </a>
             </li>
             <li>
