--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
                 </a>
             </li>
             <li>
-                <a href="https://www.zanks.link/friends/" title="🧑‍🤝‍🧑 友链">
-                    <span>🧑‍🤝‍🧑 友链</span>
+                <a href="https://www.zanks.link/friends/" title="🤝 友链">
+                    <span>🤝 友链</span>
                 </a>
             </li>
             <li>
