--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
   <meta name="referrer" content="no-referrer-when-downgrade">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.32f58c32b7729edd7cdbc9c1e592c9b1b41f9a225fac6316974caaffc38f7075.css" integrity="sha256-MvWMMrdynt1828nB5ZLJsbQfmiJfrGMWl0yq/8OPcHU=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.b70e82f5bf920f2a821a0cfc453d9f665e3e6e013729b0107b8cdc98215fd03e.css" integrity="sha256-tw6C9b&#43;SDyqCGgz8RT2fZl4&#43;bgE3KbAQe4zcmCFf0D4=" rel="preload stylesheet" as="style">
 <link rel="icon" href="https://www.zanks.link/assets/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://www.zanks.link/assets/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="https://www.zanks.link/assets/favicon-32x32.png">
@@ -189,7 +189,7 @@
             }).go();
         </script><div class="social-icons" >
     <a href="https://github.com/ZaNksC" target="_blank" rel="noopener noreferrer me"
-        title="Github">
+        title="Visit Github Page">
         <svg class="svg-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
     stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
     <path
@@ -198,7 +198,7 @@
 </svg>
     </a>
     <a href="mailto:za_nks@hotmail.com" target="_blank" rel="noopener noreferrer me"
-        title="Email">
+        title="Send Email To">
         <svg class="svg-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 21" fill="none" stroke="currentColor"
     stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
     <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
