名字更新 ZaNksC/zanks-blog@9a1391ecff7d8378b2c29c2113105f5c5361bf19

--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
                             <a class="avatar" href="/about">
                                 <img src="/images/default/avatar.jpg">
                             </a>
-                            <div class="author-name fund-title">Zanks</div>
+                            <div class="author-name fund-title">Za_Nks</div>
                             <div class="author-summary">剥龙虾大王、剥柚子也还可以</div>
                             
 <div class="social">
