--- a/about/index.html
+++ b/about/index.html
@@ -197,8 +197,25 @@
                             <img src="/images/default/avatar.jpg">
                         </div>
                         <div> Za_Nks </div>
-                        <div> 无话可说 </div>
+                        <div> 剥龙虾大王、剥柚子也还可以 </div>
                         
+<div class="social">
+    <div class="social-item"><span class="inline-svg" ><?xml version="1.0" encoding="UTF-8"?><svg width="24" height="24" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill="currentColor" d="M29.3444 30.4765C31.7481 29.977 33.9292 29.1108 35.6247 27.8391C38.5202 25.6676 40 22.3136 40 18.9999C40 16.6752 39.1187 14.505 37.5929 12.6668C36.7427 11.6425 39.2295 3.99989 37.02 5.02919C34.8105 6.05848 31.5708 8.33679 29.8726 7.83398C28.0545 7.29565 26.0733 6.99989 24 6.99989C22.1992 6.99989 20.4679 7.22301 18.8526 7.6344C16.5046 8.23237 14.2591 5.99989 12 5.02919C9.74086 4.05848 10.9736 11.9632 10.3026 12.7944C8.84119 14.6051 8 16.7288 8 18.9999C8 22.3136 9.79086 25.6676 12.6863 27.8391C14.6151 29.2857 17.034 30.2076 19.7401 30.6619" stroke="#333" stroke-width="4" stroke-linecap="round"/><path fill="currentColor" d="M19.7397 30.6619C18.5812 31.937 18.002 33.1478 18.002 34.2944C18.002 35.441 18.002 38.3464 18.002 43.0106" stroke="#333" stroke-width="4" stroke-linecap="round"/><path fill="currentColor" d="M29.3446 30.4766C30.4423 31.9174 30.9912 33.211 30.9912 34.3576C30.9912 35.5042 30.9912 38.3885 30.9912 43.0107" stroke="#333" stroke-width="4" stroke-linecap="round"/><path fill="currentColor" d="M6 31.2155C6.89887 31.3254 7.56554 31.7387 8 32.4554C8.65169 33.5303 11.0742 37.518 13.8251 37.518C15.6591 37.518 17.0515 37.518 18.0024 37.518" stroke="#333" stroke-width="4" stroke-linecap="round"/></svg>
+</span></div>
+    <div class="social-item"><span class="inline-svg" ><?xml version="1.0" encoding="UTF-8"?>
+<svg width="24" height="24" viewBox="0 0 48 48" fill="none"
+     xmlns="http://www.w3.org/2000/svg">
+    <path fill="currentColor" d="M44 24V9H24H4V24V39H24" stroke="#333" stroke-width="4"
+          stroke-linecap="round" stroke-linejoin="round"/>
+    <path fill="currentColor" d="M44 34L30 34" stroke="#333" stroke-width="4" stroke-linecap="round"
+          stroke-linejoin="round"/>
+    <path fill="currentColor" d="M39 29L44 34L39 39" stroke="#333"
+          stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/>
+    <path fill="currentColor" d="M4 9L24 24L44 9" stroke="#333" stroke-width="4"
+          stroke-linecap="round" stroke-linejoin="round"/>
+</svg>
+</span></div>
+</div>
                     </div>
                     <div class="fund-divider-vertical">
                         <span class="fund-divider-line" style="height: 90%"></span>
