favicon ZaNksC/zanks-blog@f6cdfe587837651709a1ad0b3810de2a399083fa

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 
 
-<script src="/js/bundle.2583fffb9059ffe40868dec16a4f937ab6c9daa4f4a1eaf155de10958cab21bd.js" integrity="sha256-JYP/&#43;5BZ/&#43;QIaN7Bak&#43;TerbJ2qT0oerxVd4QlYyrIb0=" crossorigin="anonymous"></script>
+<script src="/js/bundle.b33a8c790d5bb9071a858f40b5ef1d3287dc0cb1a0156ce36716a1c092b0e1b1.js" integrity="sha256-szqMeQ1buQcahY9Ate8dMofcDLGgFWzjZxahwJKw4bE=" crossorigin="anonymous"></script>
 
 
 
