Add submodule themes/fund ZaNksC/zanks-blog@59c3cc03a7567ba06df9622e9956814fb29f872a

--- a/friends/index.html
+++ b/friends/index.html
@@ -189,7 +189,7 @@
 
   </main>
   <footer>
-    <p>Copyright 2025 - 2025. All rights reserved. Powered By Hugo.Designed By Hugo-Fund</p>
+    <p>Copyright 2025 - 2025. All rights reserved. Powered By Hugo.Designed By <a href="https://github.com/ZaNksC/hugo-theme-fund/tree/main">Fund</a></p>
 
   </footer>
 </body>
