git 换行符 ZaNksC/zanks-blog@662cf05531a5add0f23b66475cf3fb9fd61a8557

--- a/chirp/index.html
+++ b/chirp/index.html
@@ -138,6 +138,61 @@
 <div class="single-container fund-padding-top ">
     <div class="main-container">
         <div class="left-container fund-border chirp-group-container">
+            <div class="chirp-container" x-slug="git-lf-crlf">
+                <div class="avatar-container"><img src="/images/example/hjj.jpg">
+                </div>
+                <div class="chirp-info">
+                    <div class="chirp-content">
+                        <p>Git 换行符统一为LF</p>
+
+
+
+<div class="fund-code-container">
+    <div class="fund-code-header">
+        <div class="fund-code-header-left-container">
+            <svg id="code-lights" xmlns="http://www.w3.org/2000/svg" version="1.1"  x="0px" y="0px" viewBox="0 0 450 130">
+                <ellipse cx="65" cy="65" rx="50" ry="52" stroke="rgb(220,60,54)" stroke-width="2" fill="rgb(237,108,96)"/>
+                <ellipse cx="225" cy="65" rx="50" ry="52"  stroke="rgb(218,151,33)" stroke-width="2" fill="rgb(247,193,81)"/>
+                <ellipse cx="385" cy="65" rx="50" ry="52"  stroke="rgb(27,161,37)" stroke-width="2" fill="rgb(100,200,86)"/>
+            </svg>
+        </div>
+        <div class="fund-code-header-mid-container">
+            
+            [ bach ]
+        </div>
+        <div class="fund-code-header-right-container">
+            <div class="fold-btn open">
+                <span class="inline-svg" ><?xml version="1.0" encoding="UTF-8"?><svg width="24" height="24" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill="currentColor" d="M19 12L31 24L19 36" stroke="#333" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/></svg>
+</span>
+            </div>
+
+            <div class="copy-btn">
+                <span class="inline-svg" ><?xml version="1.0" encoding="UTF-8"?><svg width="24" height="24" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill="currentColor" d="M13 12.4316V7.8125C13 6.2592 14.2592 5 15.8125 5H40.1875C41.7408 5 43 6.2592 43 7.8125V32.1875C43 33.7408 41.7408 35 40.1875 35H35.5163" stroke="#333" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/><path fill="currentColor" d="M32.1875 13H7.8125C6.2592 13 5 14.2592 5 15.8125V40.1875C5 41.7408 6.2592 43 7.8125 43H32.1875C33.7408 43 35 41.7408 35 40.1875V15.8125C35 14.2592 33.7408 13 32.1875 13Z" fill="none" stroke="#333" stroke-width="4" stroke-linejoin="round"/></svg>
+</span>
+            </div>
+        </div>
+    </div>
+    <div class="fund-code-content">
+        <pre tabindex="0"><code class="language-bach" data-lang="bach">git config --global core.eol lf
+git config --global core.autocrlf input</code></pre>
+    </div>
+</div>
+                    </div>
+                    <div class="chirp-imgs-container">
+                    </div>
+                    <div class="chirp-footer fund-secondary">
+                        <div>
+                            2025-01-27 10:52:25
+                        </div>
+                        <div class="chirp-comments-btn">
+                            评论
+                        </div>
+                    </div>
+                    <div class="chirp-comments">
+                        <div id="comments-git-lf-crlf"></div>
+                    </div>
+                </div>
+            </div>
             <div class="chirp-container" x-slug="hjj-chirp">
                 <div class="avatar-container"><img src="/images/example/hjj.jpg">
                 </div>
