更新主题 ZaNksC/zanks-blog@7aa0ae5e55a22262e3ea90c312aa82fdf686a976

--- a/friends/index.html
+++ b/friends/index.html
@@ -17,7 +17,7 @@
 <link rel="stylesheet" href="/css/chirp.min.ca5885bfce51f047e97eae90b850419926d33331c9f46b84cfd03258b85a3c97.css" integrity="sha256-yliFv85R8Efpfq6QuFBBmSbTMzHJ9GuEz9AyWLhaPJc=" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/comments.min.90a41b01d26325770d0fbe040cb858d4251979de5b2a406670c62de8269ccdb5.css" integrity="sha256-kKQbAdJjJXcND74EDLhY1CUZed5bKkBmcMYt6CaczbU=" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/copyright.min.cc055a71e31b212da911bb0f8acdcab692717a022a831e57e3027a2736425459.css" integrity="sha256-zAVaceMbIS2pEbsPis3KtpJxegIqgx5X4wJ6JzZCVFk=" crossorigin="anonymous">
-<link rel="stylesheet" href="/css/friends.min.d42b645af3ff2959256adac07a4aa4b41269a965612ad7f88f4f94b0e0122196.css" integrity="sha256-1CtkWvP/KVklatrAekqktBJpqWVhKtf4j0&#43;UsOASIZY=" crossorigin="anonymous">
+<link rel="stylesheet" href="/css/friends.min.0b848156173e92104ad44840b06038c15059eb7eae187175e807a15f48a1f2f1.css" integrity="sha256-C4SBVhc&#43;khBK1EhAsGA4wVBZ636uGHF16AehX0ih8vE=" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/header.min.b3ddedefba9141d3dd58dcb5275f00e01ab7bb2a97c7b7ee456b6bfff82bcbe5.css" integrity="sha256-s93t77qRQdPdWNy1J18A4Bq3uyqXx7fuRWtr//gry&#43;U=" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/home.min.199221816490e0948ddacd2bb28fd264331abc8fc80781ed3855a80b781f6cfc.css" integrity="sha256-GZIhgWSQ4JSN2s0rso/SZDMavI/IB4HtOFWoC3gfbPw=" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/last-update.min.d276c6d33c7439effc07f5634c131b5fb84d6ac0fd714acaaa574b32543e0b0a.css" integrity="sha256-0nbG0zx0Oe/8B/VjTBMbX7hNasD9cUrKqldLMlQ&#43;Cwo=" crossorigin="anonymous">
@@ -141,15 +141,28 @@
             🤝 朋友们 🤝
         </div>
 
+        <div class="post-container friend-content">
+            <p>欢迎各位，如果需要交换友链的话，请在下方留言，如果需要记录我的友链信息，请参考以下描述。</p>
+<ul>
+<li>名字： 乱话三千</li>
+<li>描述： 养了一只叫基金的可爱小猫,平时会写点技术向的东西,有点做饭的小爱好</li>
+<li>链接： <a href="https://www.zanks.link">https://www.zanks.link</a></li>
+<li>图片： <a href="https://avatars.githubusercontent.com/u/144093429?v=4">https://avatars.githubusercontent.com/u/144093429?v=4</a></li>
+</ul>
+
+        </div>
+
         <div class="friends-container shadow-a">
             
             <a class="friend-card" href="https://www.zanks.link">
-                <img class="friend-card-image" src="https://avatars.githubusercontent.com/u/144093429?v=4">
+                <div>
+                    <img class="friend-card-image" src="https://avatars.githubusercontent.com/u/144093429?v=4">
+                </div>
                 <div class="friend-card-meta">
                     <div class="fund-title">
                         Za_Nks
                     </div>
-                    <div class="fund-secondary">
+                    <div class="fund-secondary friends-description">
                         养了一只叫基金的可爱小猫,平时会写点技术向的东西,有点做饭的小爱好
                     </div>
                 </div>
