--- a/friends/index.html
+++ b/friends/index.html
@@ -10,12 +10,12 @@
 <link rel="icon" href="" type="image/x-icon"><meta name="twikoo-env-id" content="https://zanks-twikoo.netlify.app/.netlify/functions/twikoo">
 
 <link rel="stylesheet" href="/css/about.min.2e74082a8019a34e210da65762d79d8950155eb3ba845dfb3de7880ba7227b75.css" integrity="sha256-LnQIKoAZo04hDaZXYtediVAVXrO6hF37PeeIC6cie3U=" crossorigin="anonymous">
-<link rel="stylesheet" href="/css/announcement.min.4aa56228e8aaec652528ee567a608c64629a0eb2d9de7403daec6ea5e97aa9cc.css" integrity="sha256-SqViKOiq7GUlKO5WemCMZGKaDrLZ3nQD2uxupel6qcw=" crossorigin="anonymous">
+<link rel="stylesheet" href="/css/announcement.min.82f8cdbe509ade8c64ab660e447ff104c8b7b57702fdafc2d4d5131fb59b8f11.css" integrity="sha256-gvjNvlCa3oxkq2YORH/xBMi3tXcC/a/C1NUTH7WbjxE=" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/author-info.min.dc87bcd3f028c2dde3ea16d085e5717eeafcd00682a5fcfcc21169e64afe527a.css" integrity="sha256-3Ie80/Aowt3j6hbQheVxfur80AaCpfz8whFp5kr&#43;Uno=" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/authors.min.ea4efdff1158f97241ec30e87f98e5c8772e40d1f596ac9c2b9203ad6848ef2c.css" integrity="sha256-6k79/xFY&#43;XJB7DDof5jlyHcuQNH1lqycK5IDrWhI7yw=" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/basic.min.277d6a7464200b9f4e1f28aaf47a316d2cba09bdd73247a52ca33eb834b373c9.css" integrity="sha256-J31qdGQgC59OHyiq9HoxbSy6Cb3XMkelLKM&#43;uDSzc8k=" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/chirp.min.ca5885bfce51f047e97eae90b850419926d33331c9f46b84cfd03258b85a3c97.css" integrity="sha256-yliFv85R8Efpfq6QuFBBmSbTMzHJ9GuEz9AyWLhaPJc=" crossorigin="anonymous">
-<link rel="stylesheet" href="/css/comments.min.2739193240e24a2a9299dfa449e7b81eb79846863e29dacbc9c350bc97c436a1.css" integrity="sha256-JzkZMkDiSiqSmd&#43;kSee4HreYRoY&#43;KdrLycNQvJfENqE=" crossorigin="anonymous">
+<link rel="stylesheet" href="/css/comments.min.90a41b01d26325770d0fbe040cb858d4251979de5b2a406670c62de8269ccdb5.css" integrity="sha256-kKQbAdJjJXcND74EDLhY1CUZed5bKkBmcMYt6CaczbU=" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/copyright.min.cc055a71e31b212da911bb0f8acdcab692717a022a831e57e3027a2736425459.css" integrity="sha256-zAVaceMbIS2pEbsPis3KtpJxegIqgx5X4wJ6JzZCVFk=" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/friends.min.0b848156173e92104ad44840b06038c15059eb7eae187175e807a15f48a1f2f1.css" integrity="sha256-C4SBVhc&#43;khBK1EhAsGA4wVBZ636uGHF16AehX0ih8vE=" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/header.min.b3ddedefba9141d3dd58dcb5275f00e01ab7bb2a97c7b7ee456b6bfff82bcbe5.css" integrity="sha256-s93t77qRQdPdWNy1J18A4Bq3uyqXx7fuRWtr//gry&#43;U=" crossorigin="anonymous">
@@ -32,24 +32,20 @@
 <link rel="stylesheet" href="/css/site-info.min.99f7ea72487d21367994413cf28009c799038172b9fa27de1e78d6bc025a1baa.css" integrity="sha256-mffqckh9ITZ5lEE88oAJx5kDgXK5&#43;ifeHnjWvAJaG6o=" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/tags.min.01948be497fb7f68e7327070ba65a644286938095ca3199e4079a649e96f87f4.css" integrity="sha256-AZSL5Jf7f2jnMnBwumWmRChpOAlcoxmeQHmmSelvh/Q=" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/terms-tags.min.1a79156c3d468a99582ed38b45993f2077357ffd9745fe573dc9478c4afd427a.css" integrity="sha256-GnkVbD1GiplYLtOLRZk/IHc1f/2XRf5XPclHjEr9Qno=" crossorigin="anonymous">
-<link rel="stylesheet" href="/css/theme-default.min.56a13e65c5528f452c7d0e43858857104197aab8a7a38f17d6544c079a41399e.css" integrity="sha256-VqE&#43;ZcVSj0UsfQ5DhYhXEEGXqrino48X1lRMB5pBOZ4=" crossorigin="anonymous">
+<link rel="stylesheet" href="/css/theme-default.min.c9cfb78cd7c2e24661e89cb825e5ff60ca5487d85c32786d3aeaca467aa1f1bb.css" integrity="sha256-yc&#43;3jNfC4kZh6Jy4JeX/YMpUh9hcMnhtOurKRnqh8bs=" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/toc.min.97935001d1c901f611b9a21cb1e0b103af62ffd1c8dca20518900dacb2af7968.css" integrity="sha256-l5NQAdHJAfYRuaIcseCxA69i/9HI3KIFGJANrLKveWg=" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/third-party/swiper-bundle.min.min.5983c13a687fefa51ed8c90899af9d232c7cf661ce4b8227d98b68044c7b43d5.css" integrity="sha256-WYPBOmh/76Ue2MkIma&#43;dIyx89mHOS4In2YtoBEx7Q9U=" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/shortcode/admonition.min.2a42de5374e28cad4d33f9381b26947b93a6fe37801c8ec996777009ae171907.css" integrity="sha256-KkLeU3TijK1NM/k4GyaUe5Om/jeAHI7JlndwCa4XGQc=" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/shortcode/git.min.250fa59fcc440a058ca2862e8d3e4eebfdcb7e7de571b796d8d87b6b7637d992.css" integrity="sha256-JQ&#43;ln8xECgWMooYujT5O6/3Lfn3lcbeW2Nh7a3Y32ZI=" crossorigin="anonymous"><link rel="preload" href="/css/theme/github.min.1bebd3859a97fa10cb230aa9eba85751895a0c2221711d299dd7d9807c546d65.css" as="style">
 <link rel="preload" href="/css/theme/github-dark.min.a2843de5d40c4736eecaaad3cc67aa464147149e3051f1fb8328d98364348a33.css" as="style">
-<link rel="preload" href="/css/theme/twikoo-github.min.fb310c5b466f7eede3bb7899dd4070b393ffe16e70ba9eb3ccf7af3818b50b6f.css" as="style">
-<link rel="preload" href="/css/theme/twikoo-github-dark.min.16f26cba66c515e1b0052f72653bdd21499881d8d792db895cb914dd99992ecb.css" as="style">
 
 <link rel="stylesheet" href="/css/theme/github.min.1bebd3859a97fa10cb230aa9eba85751895a0c2221711d299dd7d9807c546d65.css" id="hl-github-css" media="all">
 <link rel="stylesheet" href="/css/theme/github-dark.min.a2843de5d40c4736eecaaad3cc67aa464147149e3051f1fb8328d98364348a33.css" id="hl-github-dark-css" media="all" disabled>
-<link rel="stylesheet" href="/css/theme/twikoo-github.min.fb310c5b466f7eede3bb7899dd4070b393ffe16e70ba9eb3ccf7af3818b50b6f.css" id="twikoo-github-css" media="all">
-<link rel="stylesheet" href="/css/theme/twikoo-github-dark.min.16f26cba66c515e1b0052f72653bdd21499881d8d792db895cb914dd99992ecb.css" id="twikoo-github-dark-css" media="all" disabled>
 
 
 
 
-<script src="/js/bundle.1e1d7d073a5ef9d0705fa878970ccc1a97f71462f6f03ae7e760414c51f55f3e.js" integrity="sha256-Hh19Bzpe&#43;dBwX6h4lwzMGpf3FGL28Drn52BBTFH1Xz4=" crossorigin="anonymous"></script>
+<script src="/js/bundle.5f8a61d2948ac851491087d2c077dcfc4cf7be2ad0121579ecf33a94eb939559.js" integrity="sha256-X4ph0pSKyFFJEIfSwHfc/Ez3virQEhV57PM6lOuTlVk=" crossorigin="anonymous"></script>
 
 
 
@@ -174,18 +170,6 @@
         </div>
         
 
-
-        
-<div class="comments-title" id="comments-title">
-    <div class="fund-divider fund-title">
-        <span>欢迎来到评论区</span>
-    </div>
-    <p>感谢您的耐心阅读！如需交流，请留个评论吧！ </p>
-</div>
-
-<div>
-    <div id="tcomment"></div>
-</div>
 
     </div>
 
