黄基金生日快乐 ZaNksC/zanks-blog@ea5168486d87f775c2e7701d4c3b41c8e4b8742a

--- a/chirp/index.html
+++ b/chirp/index.html
@@ -142,6 +142,35 @@
 <div class="single-container fund-padding-top ">
     <div class="main-container">
         <div class="left-container fund-border chirp-group-container">
+            <div class="chirp-container" x-slug="hjj-chirp">
+                <div class="avatar-container"><img src="/images/example/hjj.jpg">
+                </div>
+                <div class="chirp-info">
+                    <div class="chirp-content post-container">
+                        <p>祝我自己生日快乐，妈妈酱做的蛋糕真好吃，谢谢妈妈酱！</p>
+
+                    </div>
+                    <div class="chirp-imgs-container"><a href="https://zanks1996-1256221076.cos.ap-shanghai.myqcloud.com//Desktop/happybirthday3.jpg" data-fancybox="gallery">
+                            <img src="https://zanks1996-1256221076.cos.ap-shanghai.myqcloud.com//Desktop/happybirthday3.jpg">
+                        </a><a href="https://zanks1996-1256221076.cos.ap-shanghai.myqcloud.com//Desktop/happybirthday2.jpg" data-fancybox="gallery">
+                            <img src="https://zanks1996-1256221076.cos.ap-shanghai.myqcloud.com//Desktop/happybirthday2.jpg">
+                        </a><a href="https://zanks1996-1256221076.cos.ap-shanghai.myqcloud.com//Desktop/happybirtday1.jpg" data-fancybox="gallery">
+                            <img src="https://zanks1996-1256221076.cos.ap-shanghai.myqcloud.com//Desktop/happybirtday1.jpg">
+                        </a>
+                    </div>
+                    <div class="chirp-footer fund-secondary">
+                        <div>
+                            2025-02-16 21:30:00
+                        </div>
+                        <div class="chirp-comments-btn">
+                            评论
+                        </div>
+                    </div>
+                    <div class="chirp-comments">
+                        <div id="comments-hjj-chirp"></div>
+                    </div>
+                </div>
+            </div>
             <div class="chirp-container" x-slug="git-lf-crlf">
                 <div class="avatar-container"><img src="/images/example/hjj.jpg">
                 </div>
