黄基金生日快乐 ZaNksC/zanks-blog@dd7cdaa4a181c27bb6e0664974c937c316ac477b

--- a/chirp/index.html
+++ b/chirp/index.html
@@ -142,7 +142,7 @@
 <div class="single-container fund-padding-top ">
     <div class="main-container">
         <div class="left-container fund-border chirp-group-container">
-            <div class="chirp-container" x-slug="hjj-chirp">
+            <div class="chirp-container" x-slug="happybirthdaytofund-1">
                 <div class="avatar-container"><img src="/images/example/hjj.jpg">
                 </div>
                 <div class="chirp-info">
@@ -167,7 +167,7 @@
                         </div>
                     </div>
                     <div class="chirp-comments">
-                        <div id="comments-hjj-chirp"></div>
+                        <div id="comments-happybirthdaytofund-1"></div>
                     </div>
                 </div>
             </div>
