Downmars的友链 ZaNksC/zanks-blog@bb8563a66f379bd0faa1b94d5aad2725e1cdcd82

--- a/friends/index.html
+++ b/friends/index.html
@@ -158,7 +158,19 @@
 
         <div class="friends-container shadow-a">
             
-            <a class="friend-card" href="https://www.zanks.link">
+            <a class="friend-card" href="https://downmars.github.io/zh/posts/">
+                <div>
+                    <img class="friend-card-image" src="https://raw.githubusercontent.com/Downmars/images-PicGo/main/img/miku.jpg">
+                </div>
+                <div class="friend-card-meta">
+                    <div class="fund-title">
+                        Downmars
+                    </div>
+                    <div class="fund-secondary friends-description">
+                        Enjoy your life!
+                    </div>
+                </div>
+            </a><a class="friend-card" href="https://www.zanks.link">
                 <div>
                     <img class="friend-card-image" src="https://avatars.githubusercontent.com/u/144093429?v=4">
                 </div>
