添加biibii的友链信息 ZaNksC/zanks-blog@fb0b44b0e7446483fb39dd07cf2462163cff85ee

--- a/friends/index.html
+++ b/friends/index.html
@@ -164,7 +164,19 @@
 
         <div class="friends-container shadow-a">
             
-            <a class="friend-card" href="https://downmars.github.io/zh/posts/">
+            <a class="friend-card" href="https://www.biibii.cn">
+                <div>
+                    <img class="friend-card-image" src="https://bu.dusays.com/2024/12/13/675bbe7fbc833.png">
+                </div>
+                <div class="friend-card-meta">
+                    <div class="fund-title">
+                        BIIBII
+                    </div>
+                    <div class="fund-secondary friends-description">
+                        记录生活中的技术脉搏。
+                    </div>
+                </div>
+            </a><a class="friend-card" href="https://downmars.github.io/zh/posts/">
                 <div>
                     <img class="friend-card-image" src="https://raw.githubusercontent.com/Downmars/images-PicGo/main/img/miku.jpg">
                 </div>
