--- a/friends/index.html
+++ b/friends/index.html
@@ -164,7 +164,19 @@
 
         <div class="friends-container shadow-a">
             
-            <a class="friend-card" href="https://downmars.github.io/zh/posts/">
+            <a class="friend-card" href="https://www.biibii.cn">
+                <div>
+                    <img class="friend-card-image" src="https://bu.dusays.com/2024/12/13/675bbe7fbc833.png">
+                </div>
+                <div class="friend-card-meta">
+                    <div class="fund-title">
+                        BIIBII
+                    </div>
+                    <div class="fund-secondary friends-description">
+                        记录生活中的技术脉搏。
+                    </div>
+                </div>
+            </a><a class="friend-card" href="https://downmars.github.io/zh/posts/">
                 <div>
                     <img class="friend-card-image" src="https://raw.githubusercontent.com/Downmars/images-PicGo/main/img/miku.jpg">
                 </div>
@@ -174,6 +186,18 @@
                     </div>
                     <div class="fund-secondary friends-description">
                         Enjoy your life!
+                    </div>
+                </div>
+            </a><a class="friend-card" href="https://blog.032802.xyz">
+                <div>
+                    <img class="friend-card-image" src="https://img.032802.xyz/profile.webp">
+                </div>
+                <div class="friend-card-meta">
+                    <div class="fund-title">
+                        Karl的博客
+                    </div>
+                    <div class="fund-secondary friends-description">
+                        不积跬步无以至千里。
                     </div>
                 </div>
             </a><a class="friend-card" href="https://www.zanks.link">
