友链zy ZaNksC/zanks-blog@b4d8db447b0ffc1f52886691582b11816549c277

--- a/friends/index.html
+++ b/friends/index.html
@@ -212,6 +212,18 @@
                         养了一只叫基金的可爱小猫,平时会写点技术向的东西,有点做饭的小爱好
                     </div>
                 </div>
+            </a><a class="friend-card" href="https://pljzy.top/">
+                <div>
+                    <img class="friend-card-image" src="https://pljzy.top/images/logo4.jpg">
+                </div>
+                <div class="friend-card-meta">
+                    <div class="fund-title">
+                        ZY 知识库
+                    </div>
+                    <div class="fund-secondary friends-description">
+                        一个技术探索与分享的平台
+                    </div>
+                </div>
             </a>
         </div>
         
